<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_back"
    android:weightSum="5"
    tools:context=".SignUpOne">

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:padding="20dp"
        android:weightSum="5"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/dark"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:helperTextEnabled="true"
            app:helperText="@string/helper_email_text"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/dark"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinnerCountries"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_marginTop="39dp"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:helperTextEnabled="true"
            app:helperText="@string/helper_phone_number"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/dark"
            android:layout_weight="3"
            android:layout_marginTop="25dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/dark"
            android:layout_weight="1"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="25dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
<!--        <TextView-->
<!--            android:id="@+id/dobTv"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="25dp"-->
<!--            android:gravity="center"-->
<!--            android:textSize="20sp"-->
<!--            />-->
        <Button
            android:id="@+id/dobBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"
            android:background="@drawable/btn_login"
            android:text="@string/pick_your_date_of_birth"
            android:textSize="20sp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/nextBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:enabled="false"
            android:background="@drawable/btn_login"
            android:text="Next>>"
            android:textSize="20sp"
            />
    </LinearLayout>

</LinearLayout>