<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_back"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".FeedbackPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/name"
            android:textSize="25dp"
            android:textAlignment="viewStart"
            />
        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"
            android:textAlignment="viewStart"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="7"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email1"
            android:textSize="25dp"
            android:textAlignment="viewStart"
            />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="25dp"
            android:layout_marginLeft="10dp"
            android:textAlignment="viewStart"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_message"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/dark"
        android:layout_marginTop="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEYM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSend"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/contactus"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/send"
        android:textSize="25dp"
        android:layout_gravity="center"
        />
</LinearLayout>