<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/login_back"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible"
        android:id="@+id/loginScreen"
        android:orientation="vertical"
        android:paddingTop="30sp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:gravity="center"
            android:background="@drawable/blooddrop"
            android:contentDescription="TODO">
        </ImageView>
        <Space
            android:layout_width="30dp"
            android:layout_height="50dp">
        </Space>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textStyle="normal"
            android:textSize="35sp"
            android:textColor="@color/dark">

        </TextView>
        <LinearLayout
            android:weightSum="5"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinnerCountries"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_marginTop="39dp"
                android:layout_height="wrap_content" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_helper_phone_number"
                app:helperTextEnabled="true"
                app:helperText="@string/phone_number"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/dark"
                android:layout_weight="3"
                android:layout_marginTop="25dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="20sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterTextColor="@color/dark"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:hintTextColor="@color/dark"
            app:boxStrokeColor="@color/dark"
            app:passwordToggleEnabled="true"
            android:hint="@string/hint_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_login"
            android:enabled="false"
            android:textStyle="normal"
            android:text="@string/login"
            android:textColor="@drawable/btn_login_text"
            android:textSize="25sp" />
        <Button android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="20sp"
            android:textStyle="normal"
            android:enabled="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_login"
            android:textColor="@drawable/btn_login_text"/>
        <Button android:id="@+id/btn_forgot_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="20sp"
            android:textStyle="normal"
            android:enabled="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_forgot_password"
            android:textColor="@color/dark"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rateLin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:visibility="gone">
        <ImageView
            android:id="@+id/ivrate"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="70dp"
             />
    </LinearLayout>

</LinearLayout>