<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_back"
    android:orientation="vertical"
    tools:context=".Edit">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivEditPersonImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/bgo"
        app:civ_border_color="@color/dark"
        app:civ_border_width="2dp" />

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/btnChoosePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_photo"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20sp"
        android:background="@drawable/profilebtnthreethree"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="25sp"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/etEditName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="4"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:text=""
            />
    </LinearLayout>

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20sp"
        android:background="@drawable/btn_login"
        />


</LinearLayout>